2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: move inject.pl code into Bootstrap.pm, and
	separate out the common code from inject.pl and bootstrap.pl
	into subroutines that can be used by both

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: All patch file tests now also applied to files
	used in PatchScript. Hardcoded /sw test fixed to skip diff
	context- and being-replaced lines.

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Was only checking first line of .patch. Fixed.

2003-12-22  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Check for hardcoded /sw in patch file (as loaded
	by Patch, not as by PatchScript).

2003-12-21  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Gave prompt_selection_new more flexible default-
	choice behavior. Not gonna change API any more so okay to use.

2003-12-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Detect Java3D and Java Advanced Imaging

2003-12-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Recognize darwin 7.2.0.

2003-12-19  Daniel Macks <dmacks@netspace.org>

	* PkgVersion,Validation.pm: Support for "Source: none" as synonym
	for "Type: NoSource".

2003-12-19  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Added error if there is a source or MD5 for type
	Bundle.

2003-12-19  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Added errors if there is an MD5 without a
	corresponding source, if no MD5 and using the implicit/default
	source, or if there is a source or MD5 for type NoSource.
	
2003-12-17  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Added prompt_selection_new (like prompt_selection
	except parameters are less redundant and more logical). Rewrote
	prompt_selection to be just a wrapper around prompt_selection_new.
	
2003-12-16  Daniel Macks <dmacks@netspace.org>

	* Validation.pm: Remembered that Type doesn't always exist
