@@ -94,7 +94,10 @@ our %allowed_type_values =
 	(
 	 "nosource" => [ "" ],
 	 "bundle"   => [ "" ],
-	 "perl"     => [ "", "5.6.0", "5.6.1", "5.8.0", "5.8.1" ]
+	 "perl"     => [ "", "5.6.0", "5.6.1", "5.8.0", "5.8.1" ],
+	 "python"   => [ "2.1", "2.2", "2.3" ],
+	 "guile"    => [ "", "1.4", "1.6" ],
+	 "ruby"     => [ "", "1.6", "1.8" ]
 	 );
 
 
